--- a/index.html
+++ b/index.html
@@ -1,160 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Piyush weds Utkarsh</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Cinzel:wght@500;700&display=swap" rel="stylesheet">
+<title>TeamRohitOfficial45 Live</title>
 
-  <style>
-    body {
-      margin: 0;
-      background: radial-gradient(circle at top, #2b0a0a, #120606);
-      color: #f5e6c8;
-      font-family: 'Playfair Display', serif;
-      text-align: center;
+<style>
+body {
+    margin: 0;
+    font-family: 'Poppins', Arial, sans-serif;
+    background: radial-gradient(circle at top, #0f2027, #000);
+    color: #00f7ff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+/* Neon Message */
+.loading-message {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 18px;
+    padding: 12px 24px;
+    border-radius: 14px;
+    color: #00f7ff;
+    background: rgba(0, 247, 255, 0.08);
+    border: 1px solid rgba(0, 247, 255, 0.5);
+    box-shadow: 0 0 15px #00f7ff;
+    animation: glow 1.5s infinite alternate;
+}
+
+@keyframes glow {
+    from { box-shadow: 0 0 10px #00f7ff; }
+    to { box-shadow: 0 0 30px #a855f7; }
+}
+
+/* Player */
+.player-container {
+    width: 95%;
+    max-width: 1200px;
+    border-radius: 18px;
+    overflow: hidden;
+    background: #000;
+    border: 2px solid transparent;
+    box-shadow: 0 0 25px #00f7ff;
+}
+
+.player-container iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+/* Telegram Button */
+.join-telegram-container {
+    margin-top: 28px;
+}
+
+.join-telegram-btn {
+    padding: 15px 34px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+    background: linear-gradient(135deg, #00f7ff, #a855f7);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    box-shadow: 0 0 25px #00f7ff;
+    transition: 0.3s ease;
+}
+
+.join-telegram-btn:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 40px #a855f7;
+}
+
+@media (max-width: 600px) {
+    .loading-message {
+        font-size: 15px;
     }
-
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 50px 20px;
-    }
-
-    .crown {
-      font-size: 42px;
-      margin-bottom: 10px;
-    }
-
-    h1 {
-      font-family: 'Cinzel', serif;
-      font-size: 48px;
-      margin: 10px 0;
-      letter-spacing: 2px;
-      color: #ffd700;
-    }
-
-    .date {
-      font-size: 20px;
-      margin-bottom: 30px;
-      color: #f0d68c;
-    }
-
-    .names {
-      font-family: 'Cinzel', serif;
-      font-size: 42px;
-      margin: 30px 0;
-      color: #ffd700;
-    }
-
-    .divider {
-      width: 120px;
-      height: 3px;
-      background: linear-gradient(to right, #b8860b, #ffd700, #b8860b);
-      margin: 25px auto;
-      border-radius: 2px;
-    }
-
-    .subtitle {
-      font-size: 20px;
-      max-width: 700px;
-      margin: auto;
-      line-height: 1.6;
-      color: #f5e6c8;
-    }
-
-    .photos {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 30px;
-      margin: 50px 0;
-    }
-
-    .photos img {
-      width: 240px;
-      height: 300px;
-      object-fit: cover;
-      border-radius: 20px;
-      border: 4px solid #d4af37;
-      box-shadow: 0 15px 30px rgba(0,0,0,0.6);
-    }
-
-    .details {
-      background: rgba(255, 215, 0, 0.08);
-      border: 2px solid #d4af37;
-      border-radius: 20px;
-      padding: 35px;
-      margin-top: 40px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-    }
-
-    .details h2 {
-      font-family: 'Cinzel', serif;
-      font-size: 30px;
-      color: #ffd700;
-      margin-bottom: 20px;
-    }
-
-    .details p {
-      font-size: 20px;
-      margin: 12px 0;
-    }
-
-    footer {
-      margin-top: 50px;
-      font-size: 18px;
-      color: #e6c87a;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 38px;
-      }
-      .names {
-        font-size: 34px;
-      }
-    }
-  </style>
+}
+</style>
 </head>
+
 <body>
 
-  <div class="container">
+<div class="loading-message">
+    ⚡ Share & Support the Stream ⚡
+</div>
 
-    <div class="crown">👑</div>
-
-    <h1>Wedding Invitation</h1>
-    <div class="date">2 February 2026</div>
-
-    <div class="names">
-      Piyush &nbsp;♥&nbsp; Utkarsh
+<div class="player-container">
+    <div style="padding:56.25% 0 0 0; position:relative;">
+        <iframe
+            src="https://s-whindi.vercel.app/"
+            allow="fullscreen; encrypted-media; picture-in-picture"
+            allowfullscreen
+            playsinline
+            style="position:absolute; top:0; left:0; width:100%; height:100%;">
+        </iframe>
     </div>
+</div>
 
-    <div class="divider"></div>
-
-    <p class="subtitle">
-      With divine grace and boundless joy, we invite you to witness and bless
-      the sacred union of two souls as they begin their royal journey together.
-    </p>
-
-    <div class="photos">
-      <img src="https://i.ibb.co/mVc4ZBtW/IMG-20260131-WA0040.jpg" alt="Piyush">
-      <img src="https://i.ibb.co/sdQthZNY/IMG-20260202-WA0006.jpg" alt="Utkarsh">
-    </div>
-
-    <div class="details">
-      <h2>Royal Wedding Ceremony</h2>
-      <p>🕒 <strong>Time:</strong> 2:00 PM to 5:00 PM</p>
-      <p>📍 <strong>Venue:</strong> N.M.D College Ground, Gondia</p>
-    </div>
-
-    <footer>
-      Your gracious presence will make this royal celebration truly complete ✨
-    </footer>
-
-  </div>
+<div class="join-telegram-container">
+    <button class="join-telegram-btn"
+        onclick="window.open('https://t.me/+lkbpBqFd0FljNzJl','_blank')">
+        🚀 Join Telegram
+    </button>
+</div>
 
 </body>
 </html>
